--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,8 +43,7 @@ jobs:
               conda update --yes --quiet conda;
               curl -O https://raw.githubusercontent.com/mne-tools/mne-python/master/environment.yml
               conda env create -f environment.yml
-              source activate mne
-              echo "source activate mne" >> $BASH_ENV;
+              conda activate mne
 
         - save_cache:
             key: pip-cache
@@ -55,26 +54,20 @@ jobs:
         - run:
             name: Check installation
             command: |
+               conda activate mne
                which python
                python -c "import mne; mne.sys_info()"
 
         - run:
             name: Get data
             command: |
-              mkdir -p ~/mne_data
               make fetch
-
-        - run:
-            name: Verify data is there
-            command: |
-              ls -al ~/mne_data;
 
         # Run the scripts
         - run:
             name: make html
             command: |
               make preprocess
-
 
         # Save the outputs
         - store_artifacts:
