--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,10 +41,11 @@ jobs:
               ~/miniconda.sh -b -p ~/miniconda;
               export export PATH=~/miniconda/bin:$PATH;
               conda update --yes --quiet conda;
-              conda create --name mne
+              curl -O https://raw.githubusercontent.com/mne-tools/mne-python/master/environment.yml
+              sed -i '/pylsl/d' ./environment.yml
+              conda env create -f environment.yml
               conda init bash
               conda activate mne
-              conda install mne
               python -c "import mne; mne.sys_info()"
               conda list
 
