activate in make html

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,7 +70,8 @@ jobs:
         - run:
             name: make html
             command: |
-              make preprocess
+               source activate mne
+               make preprocess
 
         # Save the outputs
         - store_artifacts:
